Fixed dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,7 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0c0a09;
-    --foreground: #fff;
+    --foreground: white;
   }
 }
 
